WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131212
REGRESSION (
r166615
): Pressing return doesn’t submit search term at bing.com
https://bugs.webkit.org/show_bug.cgi?id=131212
Summary
REGRESSION (r166615): Pressing return doesn’t submit search term at bing.com
mitz
Reported
2014-04-03 23:19:26 PDT
To reproduce this bug, navigate to the Bing homepage or a Bing search results page, type something in the Bing search field, and press return. Nothing happens. This is the regression range: <
http://trac.webkit.org/log/trunk/?rev=166621&stop_rev=166612
>. I strongly suspect <
http://trac.webkit.org/r166615
>, the fix for
bug 131055
.
Attachments
proposed fix
(6.93 KB, patch)
2014-04-04 10:58 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
proposed fix
(7.01 KB, patch)
2014-04-04 11:02 PDT
,
Alexey Proskuryakov
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-04-03 23:24:47 PDT
Confirmed that this was caused by
r166615
.
mitz
Comment 2
2014-04-03 23:26:59 PDT
<
rdar://problem/16521788
>
Alexey Proskuryakov
Comment 3
2014-04-04 10:58:47 PDT
Created
attachment 228607
[details]
proposed fix
Alexey Proskuryakov
Comment 4
2014-04-04 11:02:22 PDT
Created
attachment 228608
[details]
proposed fix Let's not a revert a FIXME.
Alexey Proskuryakov
Comment 5
2014-04-04 11:08:35 PDT
Committed <
http://trac.webkit.org/r166793
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug