REGRESSION (r166615): Pressing return doesnât submit search term at bing.com https://bugs.webkit.org/show_bug.cgi?id=131212 <rdar://problem/16521788>

Reviewed by Dan Bernstein.

Source/WebCore:

Test: fast/forms/submit-while-you-submit.html

Turns out that m_shouldSubmit can actually be modified in a code path where we can't
directly return the result. I'm not sure if the current behavior is entirely correct
(we have open bugs about submitting forms multiple times), but let's restore it to
pre-r166615 state.

* html/HTMLFormElement.cpp:
(WebCore::HTMLFormElement::HTMLFormElement):
(WebCore::HTMLFormElement::prepareForSubmission):
(WebCore::HTMLFormElement::submit):
* html/HTMLFormElement.h:

LayoutTests:

* fast/forms/submit-while-you-submit-expected.txt: Added.
* fast/forms/submit-while-you-submit.html: Added.



Canonical link: https://commits.webkit.org/149285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166793 268f45cc-cd09-0410-ab3c-d52691b4dbfc